--- a/css-grid-classes/index.html
+++ b/css-grid-classes/index.html
@@ -11,40 +11,40 @@
 
   <div class="container">
     <div class="row">
-      <div class="column-h1">
+      <div class="column-full">
         <h1>Choose your character!</h1>
       </div>
     </div>
     <div class="row">
-      <div class="column-link">
+      <div class="column-third">
         <img class="character" src="./images/link.png" alt="Link">
       </div>
-      <div class="column-link">
+      <div class="column-third">
         <h2>Super Smash Bros. Ultimate</h2>
         <p>
           Super Smash Bro. Ultimate recieved universal acclaim from both critics and players, with some critics calling it the best installment in the series. It recieved praise for its large   amount of content and fine-tuning of existing Smash gameplay elements, although its online mode was widely criticized.
         </p>
       </div>
-      <div class="column-link">
+      <div class="column-third">
         <img class="character" src="./images/yoshi.png" alt="Yoshi">
       </div>
     </div>
     <div class="row">
-      <div class="column-four">
+      <div class="column-fourth">
         <img class="character" src="./images/kirby.png" alt="Kirby">
       </div>
-      <div class="column-four">
+      <div class="column-fourth">
         <img class="character" src="./images/fox.png" alt="Fox">
       </div>
-      <div class="column-four">
+      <div class="column-fourth">
         <img class="character" src="./images/pikachu.png" alt="Pikachu">
       </div>
-      <div class="column-four">
+      <div class="column-fourth">
         <img class="character" src="./images/ness.png" alt="Ness">
       </div>
     </div>
     <div class="row">
-      <div class="column-para">
+      <div class="column-two-third">
         <h2>Donkey Kong</h2>
         <p>
           Donkey Kong is a series of video games featuring the adventures of a gorilla called Donkey Kong, conceived by Shigeru Miyamoto in 1981. The franchise consists mainly of two games genres, but also includes additional spin-off titles of various genres.
@@ -53,15 +53,15 @@
           The games of the first genre are mostly single-screen platform/action puzzle types, featuring Donkey Kong as the opponent in an industrial construction setting.
         </p>
       </div>
-      <div class="column-character-img">
+      <div class="column-one-third">
         <img class="character" src="./images/dk.png" alt="Donkey Kong">
       </div>
     </div>
     <div class="row">
-      <div class="column-character-img">
+      <div class="column-one-third">
         <img class="character" src="./images/mario.png" alt="Mario">
       </div>
-      <div class="column-para">
+      <div class="column-two-third">
         <h2>Mario</h2>
         <p>
           Mario is a fictional character in the Mario video game franchise, owned by Nintendo and created by Japanese video
