--- a/css-three-column-layout/index.html
+++ b/css-three-column-layout/index.html
@@ -19,7 +19,9 @@
         </div>
         <div>
           <h3>Streamlined QMS</h3>
+          <div class="para">
           <p>A QMS that includes modules for all stages of the product life cycle from Design Control to CAPA</p>
+          </div>
         </div>
       </div>
       <div class="column-center">
@@ -28,7 +30,9 @@
         </div>
         <div>
           <h3>Integrates with existing tools</h3>
+          <div class="para">
           <p>Enzyme QMS integrates with your existing tools, such as JIRA, GitHub and Jenkins with Enzyme</p>
+          </div>
         </div>
       </div>
       <div class="column-div">
@@ -37,7 +41,9 @@
         </div>
         <div>
           <h3>In-depth Onboarding</h3>
+          <div class="para">
           <p>We train your entire team and provide you with support when and as it's needed</p>
+          </div>
         </div>
       </div>
     </div>
