--- a/css-three-column-layout/index.html
+++ b/css-three-column-layout/index.html
@@ -10,40 +10,38 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="container">
-    <h2>Designed for life science. Optimizes for SaMD and Digit Health</h2>
-    <div class="container-two" >
-      <div class="column-div">
+  <h2>Designed for life science. Optimized for SaMD and Digital Health.</h2>
+    <div class="container">
+      <div class="column">
         <div class="image-div">
           <img class="icon" src="./images/merge.png" alt="merge">
         </div>
         <div>
           <h3>Streamlined QMS</h3>
-          <div class="para">
+          <div>
           <p>A QMS that includes modules for all stages of the product life cycle from Design Control to CAPA</p>
-          </div>
+        </div>
         </div>
       </div>
-      <div class="column-center">
+      <div class="column">
         <div class="image-div">
           <img class="icon" src="./images/cloud-computing.png" alt="cloud">
         </div>
         <div>
           <h3>Integrates with existing tools</h3>
-          <div class="para">
+          <div>
           <p>Enzyme QMS integrates with your existing tools, such as JIRA, GitHub and Jenkins with Enzyme</p>
           </div>
         </div>
       </div>
-      <div class="column-div">
+      <div class="column">
         <div class="image-div" >
           <img class="icon" src="./images/discussion.png" alt="people">
         </div>
         <div>
           <h3>In-depth Onboarding</h3>
-          <div class="para">
+          <div>
           <p>We train your entire team and provide you with support when and as it's needed</p>
-          </div>
         </div>
       </div>
     </div>
