Fixed-Javascript-light-bulbs

--- a/javascript-light-bulb/index.html
+++ b/javascript-light-bulb/index.html
@@ -7,7 +7,7 @@
   <title>JavaScript Light Bulb</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="body-on">
   <div id="bulb" class="light-on"></div>
 </body>
 <script src="main.js"></script>
